# SAM3DBody_utills

./: .gitignore  LICENSE  README.en.md  README.md  config.ini  pyproject.toml  run.cmd  run.sh  setup.cmd  setup.py  setup.sh
docs/: fbx_bone_structure.md  humanoid_mapping.md  mixamo_bone_structure.md
docs/licenses/: LICENSE-MIT-SAM3DBody  NOTICE-MHR  THIRD_PARTY_NOTICES.md
presets/default/: face_blendshapes.npz  mhr_reference_vertices.json
presets/default/chara_settings_presets/: chibi.json  chibi2.json  female.json  male.json  male_musclar.json  reset.json
src/sam3dbody_app/: config.py  main.py
src/sam3dbody_app/core/sam3/: __init__.py  model_builder.py
src/sam3dbody_app/core/sam3/model/: io_utils.py  sam3_video_inference.py
src/sam3dbody_app/core/sam3/train/data/: sam3_image_dataset.py
src/sam3dbody_app/routers/: character.py  export.py  health.py  pipeline.py  preset_admin.py  video.py
src/sam3dbody_app/services/: animated_fbx_export.py  bvh_export.py  character_shape.py  fbx_export.py  hand_inference.py  motion_session.py  obj_export.py  pipeline.py  pose_session.py  preset_admin.py  preset_pack.py  renderer.py  sam3_loader.py  sam3_mask.py  sam3dbody_loader.py  segmentation.py  video_frames.py
tools/: build_animated_fbx.py  build_rigged_fbx.py  export_reference_obj.py  extract_face_blendshapes.py  fbx2bvh_simple.py  find_free_port.py  humanoid_convert.py  rebuild_vertex_jsons.py  rename_blendshape_keys.py  rest_correction.json  show_urls.py  sync_presets_with_npz.py
tools/bone_backup/: all_parts_bs.fbx
web/: index.html
web/static/: app.js  i18n.js  style.css
wheels/: rebuild_wheel.py
